--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
       #viewContainer {
         position: absolute;
       }
+      .searchrow:hover {
+        outline: 2px solid red;
+      }
+      svg {
+          position: absolute;
+          z-index: 10; /* Higher z-index to place it on top of the canvas */
+      }
     </style>
 </head>
 <body>
@@ -24,7 +31,7 @@
     </div>
     <hr>
     <div class="row">
-      <div class="col kvp-result position-absolute top-10 start-0 w-50 h-100"></div>
+      <div class="col kvp-result position-absolute top-10 start-0 w-50 h-50 overflow-auto"></div>
       <div id="viewContainer" class="col position-absolute top-10 end-0 w-50 h-80 overflow-auto">
         <div class="row">
           <form>
@@ -43,18 +50,19 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.5.136/pdf.mjs" type="module"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.5.136/pdf_viewer.mjs" type="module"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.2.4/svg.min.js" integrity="sha512-ovlWyhrYXr3HEkGJI5YPXIFYIbHEKs2yfemKVVIIQe9U74tXyTuVdzMlvZlw/0X5lnIDRgtVlckrkeuCrDpq4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="pdfviewer.js"></script>
 <script type="module">
   import { html, render } from 'https://unpkg.com/lit-html@3.2.0/lit-html.js';
   pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.5.136/pdf.worker.mjs";
-  const renderTable = (obj) => html`
+  const renderTable = (kvps) => html`
     <table class="table table-sm table-striped">
-      <thead><tr><th>Key</th><th>Value</th></tr></thead>
+      <thead><tr><th>Item</th><th>Value</th></tr></thead>
       <tbody>
-      ${Object.entries(obj).map(([key, value]) => html`
-        <tr>
-          <td class="keyCol">${key}</td>
-          <td class="valueCol">${value}</td>
+      ${kvps.map((kvp) => html`
+        <tr class="searchrow" data-page="${kvp.page}" data-x="${kvp.bbox.x}" data-y="${kvp.bbox.y}" data-width="${kvp.bbox.width}" data-height="${kvp.bbox.height}">
+          <td class="keyCol"><strong>${kvp.key}</strong></td>
+          <td class="valueCol">${kvp.value}</td>
         </tr>
       `)}
       </tbody>
@@ -69,10 +77,15 @@
       body: formData
     })
     .then(response => response.json())
-    .then(data => {
-      // render(renderTable(data.kvps), document.querySelector('.kvp-result'));
-      renderPDF(data.url)
-      // attachSearchListeners()
+    .then(async (data) => {
+      render(renderTable(data.kvps), document.querySelector('.kvp-result'));
+      await renderPDF(data.url)
+      let canvas = document.querySelector('canvas')
+      // Add the SVG box
+      let draw = SVG().addTo(".canvasWrapper").size("100%", "100%")
+      draw.node.style.top = `${canvas.offsetTop}`;
+      draw.node.style.left = `${canvas.offsetLeft}`;
+      let rect = draw.rect(100, 100).attr({ fill: '#f06' }).move(0, 0)
     })
     .catch(error => {
       console.error(error);
