--- a/index.html
+++ b/index.html
@@ -3,46 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Defect Detection</title>
+    <title>SC Registry AI Documentation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.5.136/pdf_viewer.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
-      #viewContainer {
-        position: absolute;
+      .pdfContainer {
+        max-width: 50%;
       }
       .searchrow:hover {
         outline: 2px solid red;
       }
       svg {
-          position: absolute;
-          z-index: 10; /* Higher z-index to place it on top of the canvas */
+        position: absolute;
+        z-index: 10; /* Higher z-index to place it on top of the canvas */
+      }
+      .tableContainer {
+        max-height: 50vh;
       }
     </style>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href=".">SC-R-AI</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="nav-item dropdown ms-auto" role="group" aria-label="Toggle dark mode" title="Toggle Dark Mode">
+          <button
+            class="dark-theme-toggle btn btn-outline-light dropdown-toggle"
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+            aria-label="Toggle theme (auto)"
+          >
+            <i class="bi bi-circle-half"></i> <span class="d-lg-none ms-2">Toggle theme</span>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li>
+              <button class="dropdown-item" data-bs-theme-value="light">
+                <i class="me-2 bi bi-sun-fill"></i> Light
+              </button>
+            </li>
+            <li>
+              <button class="dropdown-item" data-bs-theme-value="dark">
+                <i class="me-2 bi bi-moon-stars-fill"></i> Dark
+              </button>
+            </li>
+            <li>
+              <button class="dropdown-item" data-bs-theme-value="auto">
+                <i class="me-2 bi bi-circle-half"></i> Auto
+              </button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
   <div class="container pt-2">
     <div class="row">
       <form method="post" enctype="multipart/form-data">
         <div class="input-group">
-          <input name="file" class="form-control" type="file">
-          <button class="btn btn-primary" type="submit">Upload</button>
+          <input name="file" class="form-control form-control-sm" type="file">
+          <button class="btn btn-primary btn-sm" type="submit">Upload</button>
         </div>
       </form>
     </div>
     <hr>
-    <div class="row">
-      <div class="col kvp-result position-absolute top-10 start-0 w-50 h-50 overflow-auto"></div>
-      <div id="viewContainer" class="col position-absolute top-10 end-0 w-50 h-80 overflow-auto">
+    <div class="results row d-none">
+      <div class="col-6">
+        <div class="row py-1"><h6>Type of Document: <span id="doctype" class="badge rounded-pill text-bg-info"></span></h6></div>
+        <div class="row py-1"><h6>Annexures indexed correctly? <span id="annexure"></span></h6></div>
+        <div class="row py-1"><h6 id="badQuality"></h6></div>
+        <hr>
+        <div class="row overflow-auto tableContainer py-2"><h5>Metadata</h5><div class="kvp-result"></div></div>
+      </div>
+      <div id="pdfCol" class="col-6">
         <div class="row">
           <form>
-            <div class="input-group disabled">
-              <div class="btn btn-primary mb-2">Up</div>
-              <input class="form-control mb-2" type="number" value="1" min="1">
-              <div class="btn btn-primary mb-2">Down</div>
+            <div class="input-group">
+              <div class="btn btn-primary mb-2 btn-sm"><i class="bi bi-chevron-up"></i></div>
+              <input class="form-control form-control-sm mb-2" type="number" value="1" min="1">
+              <div class="btn btn-primary mb-2 btn-sm"><i class="bi bi-chevron-down"></i></div>
             </div>
           </form>
         </div>
-        <div class="row"><div id="viewer" class="pdfViewer"></div></div>
+        <div class="row pdfRow"><div class="pdfContainer"></div></div>
       </div>
     </div>
   </div>
@@ -68,6 +124,12 @@
       </tbody>
     </table>`;
 
+  const renderBadPages = (arr) => html`
+    Bad quality pages: ${arr.map((page) => html`
+      <span data-page="${page}" class="badge rounded pill bg-danger px-1">${page}</span>
+    `)}
+  `;
+
   let form = document.querySelector('form');
   let pdfDoc, pdfViewer;
   form.addEventListener('submit', (e) => {
@@ -80,14 +142,29 @@
     .then(response => response.json())
     .then(async (data) => {
       pdfDoc = await loadDocument(data.url)
+      document.querySelector('.results').classList.remove('d-none')
       pdfViewer = await renderPage(pdfDoc, 1, pdfViewer)
       render(renderTable(data.kvps), document.querySelector('.kvp-result'));
-      // Add click listener
+      document.querySelector('#doctype').innerText = data.doctype
+      let annexData = JSON.parse(data.annex)
+      let annexSpan = document.querySelector('#annexure')
+
+      annexSpan.innerText = annexData.annexures_page_nos_present ? "Yes" : "No"
+      annexSpan.classList.add("badge", "rounded-pill", "text-bg-success")
+      annexSpan.addEventListener('click', async function(event) {
+        await renderPage(pdfDoc, annexData.toc_pages[0], pdfViewer)
+      });
+      render(renderBadPages(data.bad_quality), document.querySelector('#badQuality'));
+      document.querySelectorAll('span.bg-danger').forEach((span) => {
+        span.addEventListener('click', async function(event) {
+          await renderPage(pdfDoc, parseInt(span.dataset.page), pdfViewer)
+        })
+      })
       document.querySelectorAll('tr.searchrow').forEach(tr => {
         tr.addEventListener('click', async function(event) {
           await renderPage(pdfDoc, parseInt(tr.dataset.page), pdfViewer)
           let rect = drawAnnotationBox(tr.dataset)
-          rect.scrollIntoView()
+          rect.scrollIntoView(false)
         })
       })
     })
